--- a/app/src/main/res/layout/activity_add_account.xml
+++ b/app/src/main/res/layout/activity_add_account.xml
@@ -13,7 +13,6 @@
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
         android:background="@color/colorPrimary"
-        style="@style/MaterialAnimations"
         android:elevation="4dp">
 
         <RelativeLayout
@@ -34,8 +33,8 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_gravity="center_vertical|start"
-                android:text="Add Account"
-                android:textColor="#ffffff"
+                android:text="记账"
+                android:textColor="#000"
                 android:textSize="20dp"/>
         </RelativeLayout>
 
