--- a/app/src/main/res/layout/choose_month_layout.xml
+++ b/app/src/main/res/layout/choose_month_layout.xml
@@ -16,6 +16,7 @@
             android:gravity="center"
             android:text="1"/>
         <TextView
+            android:id="@+id/Feb"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -23,6 +24,7 @@
             android:textSize="20sp"
             android:text="2"/>
         <TextView
+            android:id="@+id/Mar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -30,6 +32,7 @@
             android:textSize="20sp"
             android:text="3"/>
         <TextView
+            android:id="@+id/Apr"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -42,6 +45,7 @@
         android:layout_height="wrap_content"
         android:paddingTop="10dp">
         <TextView
+            android:id="@+id/May"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -49,6 +53,7 @@
             android:gravity="center"
             android:text="5"/>
         <TextView
+            android:id="@+id/Jun"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -56,6 +61,7 @@
             android:textSize="20sp"
             android:text="6"/>
         <TextView
+            android:id="@+id/Jul"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -63,6 +69,7 @@
             android:textSize="20sp"
             android:text="7"/>
         <TextView
+            android:id="@+id/Aug"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -75,6 +82,7 @@
         android:layout_height="wrap_content"
         android:paddingTop="10dp">
         <TextView
+            android:id="@+id/Sept"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -82,6 +90,7 @@
             android:gravity="center"
             android:text="9"/>
         <TextView
+            android:id="@+id/Obt"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -89,6 +98,7 @@
             android:textSize="20sp"
             android:text="10"/>
         <TextView
+            android:id="@+id/Nov"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -96,6 +106,7 @@
             android:textSize="20sp"
             android:text="11"/>
         <TextView
+            android:id="@+id/Dec"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
