--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -18,11 +18,13 @@
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:layout_margin="10dp"
-            android:text="头像"/>
+            android:text="头像"
+            android:textColor="@color/black"/>
         <ImageView
             android:id="@+id/portrait_imageview"
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:padding="10dp"
             android:src="@mipmap/ic_launcher"/>
     </LinearLayout>
 
@@ -42,7 +44,8 @@
             android:layout_weight="1"
             android:layout_margin="10dp"
             android:gravity="center_vertical"
-            android:text="背景颜色"/>
+            android:text="背景颜色"
+            android:textColor="@color/black"/>
         <ImageView
             android:id="@+id/background_imageview"
             android:layout_width="40dp"
