--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="5dp"
         android:text="https://github.com/Byacht"/>
 
     <TextView
@@ -25,12 +25,12 @@
         android:text="Huang Ting"/>
 
     <ImageView
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:id="@+id/navigation_iv"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_above="@id/id_username"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp"
-        android:scaleType="fitCenter"
-        android:src="@drawable/header"/>
+        android:layout_marginBottom="5dp"
+        android:scaleType="fitCenter"/>
 
 </RelativeLayout>
