--- a/app/src/main/res/layout/choose_month_layout.xml
+++ b/app/src/main/res/layout/choose_month_layout.xml
@@ -6,113 +6,125 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="10dp">
-        <TextView
+        android:paddingTop="0dp">
+        <Button
             android:id="@+id/Jan"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:gravity="center"
+            android:background="?android:attr/selectableItemBackground"
             android:text="1"/>
-        <TextView
+        <Button
             android:id="@+id/Feb"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:textSize="20sp"
-            android:text="2"/>
-        <TextView
+            android:textSize="18sp"
+            android:text="2"
+            android:background="?android:attr/selectableItemBackground"/>
+        <Button
             android:id="@+id/Mar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:textSize="20sp"
-            android:text="3"/>
-        <TextView
+            android:textSize="18sp"
+            android:text="3"
+            android:background="?android:attr/selectableItemBackground"/>
+        <Button
             android:id="@+id/Apr"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:textSize="20sp"
-            android:text="4"/>
+            android:textSize="18sp"
+            android:text="4"
+            android:background="?android:attr/selectableItemBackground"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="10dp">
-        <TextView
+        android:paddingTop="0dp">
+        <Button
             android:id="@+id/May"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:gravity="center"
-            android:text="5"/>
-        <TextView
+            android:text="5"
+            android:background="?android:attr/selectableItemBackground"/>
+        <Button
             android:id="@+id/Jun"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:textSize="20sp"
-            android:text="6"/>
-        <TextView
+            android:textSize="18sp"
+            android:text="6"
+            android:background="?android:attr/selectableItemBackground"/>
+        <Button
             android:id="@+id/Jul"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:textSize="20sp"
-            android:text="7"/>
-        <TextView
+            android:textSize="18sp"
+            android:text="7"
+            android:background="?android:attr/selectableItemBackground"/>
+        <Button
             android:id="@+id/Aug"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:textSize="20sp"
-            android:text="8"/>
+            android:textSize="18sp"
+            android:text="8"
+            android:background="?android:attr/selectableItemBackground"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="10dp">
-        <TextView
+        android:paddingTop="0dp">
+        <Button
             android:id="@+id/Sept"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:gravity="center"
-            android:text="9"/>
-        <TextView
+            android:text="9"
+            android:background="?android:attr/selectableItemBackground"/>
+        <Button
             android:id="@+id/Obt"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:textSize="20sp"
-            android:text="10"/>
-        <TextView
+            android:textSize="18sp"
+            android:text="10"
+            android:background="?android:attr/selectableItemBackground"/>
+        <Button
             android:id="@+id/Nov"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:textSize="20sp"
-            android:text="11"/>
-        <TextView
+            android:textSize="18sp"
+            android:text="11"
+            android:background="?android:attr/selectableItemBackground"/>
+        <Button
             android:id="@+id/Dec"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:textSize="20sp"
-            android:text="12"/>
+            android:textSize="18sp"
+            android:text="12"
+            android:background="?android:attr/selectableItemBackground"/>
     </LinearLayout>
 
 </LinearLayout>
