--- a/app/src/main/res/layout/account_view.xml
+++ b/app/src/main/res/layout/account_view.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:account="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
     <com.example.dn.accounting.View.AccountView
-        android:id="@+id/account"
+        android:id="@+id/account_view"
         android:layout_width="320dp"
         android:layout_height="280dp" />
 
     <CheckBox
-        android:id="@+id/checkbox"
+        android:id="@+id/cb_item_selected"
         android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
