--- a/app/src/main/res/layout/activity_add_cost.xml
+++ b/app/src/main/res/layout/activity_add_cost.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">
@@ -9,34 +8,15 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <ImageView
-            android:id="@+id/tag_imageview"
+            android:id="@+id/tag_img"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_margin="10dp"
             android:src="@drawable/food"/>
         <include layout="@layout/add_account_dialog"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:layout_gravity="center_vertical"/>
-        <!--<EditText-->
-            <!--android:id="@+id/information_another_edittext"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_weight="1"-->
-            <!--android:maxLength="16"-->
-            <!--android:hint="交易信息"/>-->
-
-
-        <!--<com.andreabaccega.widget.FormEditText-->
-            <!--app:testType="numeric"-->
-            <!--app:testErrorString="text should be number"-->
-            <!--app:emptyErrorString="text can't be empty"-->
-            <!--android:id="@+id/cost_another_edittext"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_weight="2"-->
-            <!--android:hint="金额（元）"-->
-            <!--android:inputType="number"/>-->
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_gravity="center_vertical"/>
     </LinearLayout>
 
     <ImageView
@@ -46,7 +26,7 @@
         android:layout_margin="5dp"/>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/tag_view"
+        android:id="@+id/tag_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </android.support.v7.widget.RecyclerView>
