--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -1,76 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_statistics"
-        android:layout_width="match_parent"
-        android:layout_height="?android:attr/actionBarSize"
-        android:background="@color/blue">
-    </android.support.v7.widget.Toolbar>
-
-    <TextView
-        android:id="@+id/showtime_textview"
+    android:layout_height="match_parent">
+    
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="2017-3"/>
+        app:elevation="0dp">
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar_statistics"
+            android:layout_width="match_parent"
+            android:layout_height="?android:attr/actionBarSize"
+            android:background="@color/blue"
+            app:layout_scrollFlags="scroll|enterAlways">
+        </android.support.v7.widget.Toolbar>
 
-    <android.support.design.widget.TabLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/tabLayout"
-        app:tabMode="fixed"
-        app:tabGravity="fill">
-    </android.support.design.widget.TabLayout>
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tabMode="fixed"
+            app:tabGravity="fill"
+            app:tabTextColor="@color/white"
+            app:layout_scrollFlags="scroll|enterAlways">
+        </android.support.design.widget.TabLayout>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewPager"
-        android:layout_width="match_parent"
-        android:layout_height="0dp">
-    </android.support.v4.view.ViewPager>
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewPager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_scrollFlags="scroll|enterAlways"
+            android:background="@color/white">
+        </android.support.v4.view.ViewPager>
 
-    <ScrollView
+        <TextView
+            android:id="@+id/showtime_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:background="@color/white"/>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.widget.NestedScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-
             <com.example.dn.accounting.View.StatisticsView
-                android:id="@+id/cost_statistics"
+                android:id="@+id/cost_statistics_view"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:layout_margin="5dp"
                 app:type="支出"
                 app:color="@color/costColor"/>
             <com.example.dn.accounting.View.StatisticsView
-                android:id="@+id/income_statistics"
+                android:id="@+id/income_statistics_view"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:layout_margin="5dp"
                 app:type="收入"
                 app:color="@color/incomeColor"/>
             <com.example.dn.accounting.View.StatisticsView
-                android:id="@+id/balance_statistics"
+                android:id="@+id/balance_statistics_view"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:layout_margin="5dp"
                 app:type="结余"
                 app:color="@color/costColor"/>
-
             <com.example.dn.accounting.View.PieChartView
-                android:id="@+id/pie_chart"
+                android:id="@+id/pie_chart_cost"
                 android:layout_gravity="center_horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:pietext="支出"/>
-
             <com.example.dn.accounting.View.PieChartView
                 android:id="@+id/pie_chart_income"
                 android:layout_gravity="center_horizontal"
@@ -78,7 +87,7 @@
                 android:layout_height="wrap_content"
                 app:pietext="收入"/>
         </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 
-    </ScrollView>
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
