--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -17,7 +17,7 @@
         <!--android:text="https://github.com/Byacht"/>-->
 
     <TextView
-        android:id="@+id/id_username"
+        android:id="@+id/tv_nav_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -29,7 +29,7 @@
         android:id="@+id/navigation_iv"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_above="@id/id_username"
+        android:layout_above="@id/tv_nav_header"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="5dp"
         android:scaleType="fitCenter"/>
