--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -5,6 +5,7 @@
     android:background="@color/blue"
     android:orientation="vertical"
     android:padding="16dp"
+    android:tag="skin:bg_color:background"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <!--<TextView-->
