--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -7,13 +7,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:fitsSystemWindows="true"
     tools:context="com.example.dn.accounting.Activity.SettingActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_setting"
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
-        android:background="@color/blue"/>
+        android:tag="skin:bg_color:background"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"
+        android:src="@color/divider_line"/>
     
     <LinearLayout
         android:id="@+id/set_portrait_layout"
@@ -25,21 +35,26 @@
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:layout_margin="10dp"
+            android:paddingLeft="10dp"
             android:text="头像"
+            android:textSize="16sp"
             android:textColor="@color/black"/>
         <ImageView
             android:id="@+id/portrait_imageview"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             android:layout_gravity="center"
-            android:padding="10dp"
+            android:paddingRight="15dp"
             android:src="@mipmap/ic_launcher"/>
     </LinearLayout>
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_margin="10dp"
+        android:layout_height="0.5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="5dp"
         android:src="@color/divider_line"/>
 
     <LinearLayout
@@ -51,22 +66,27 @@
             android:layout_height="30dp"
             android:layout_weight="1"
             android:layout_margin="10dp"
+            android:paddingLeft="10dp"
             android:gravity="center_vertical"
             android:text="背景颜色"
+            android:textSize="16sp"
             android:textColor="@color/black"/>
         <ImageView
             android:id="@+id/background_imageview"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:padding="10dp"
+            android:paddingRight="15dp"
             android:layout_gravity="center"
             android:src="@mipmap/ic_launcher"/>
     </LinearLayout>
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_margin="10dp"
+        android:layout_height="0.5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="5dp"
         android:src="@color/divider_line"/>
 
     <LinearLayout
@@ -78,8 +98,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="3"
             android:layout_margin="10dp"
+            android:paddingLeft="10dp"
             android:layout_gravity="center_vertical"
             android:text="超额提醒"
+            android:textSize="16sp"
             android:textColor="@color/black"/>
         <TextView
             android:id="@+id/tv_over_cost"
@@ -97,7 +119,16 @@
             toggle:tbSpotColor="#F5F5F5"
             android:layout_height="20dp"
             android:layout_gravity="center_vertical"
-            android:layout_margin="10dp"/>
+            android:layout_marginRight="15dp"/>
     </LinearLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="5dp"
+        android:src="@color/divider_line"/>
 
 </LinearLayout>
