--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#2196F3</color>
     <color name="colorPrimaryDark">#0288D1</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#448AFF</color>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
     <color name="blue">#2196F3</color>
@@ -11,6 +11,12 @@
     <color name="divider_line">#BDBDBD</color>
     <color name="costColor">#E91E63</color>
     <color name="incomeColor">#4CAF50</color>
+    <color name="transparent">#00000000</color>
+    <color name="bg_color">#2198f3</color>
+    <color name="bg_color_purple">#9C27B0</color>
+    <color name="bg_color_brown">#795548</color>
+    <color name="bg_color_orange">#FFC107</color>
+    <color name="bg_color_pink">#E91E63</color>
 
     <color name="tagColor0">#E91E63</color>
     <color name="tagColor1">#FF9800</color>
